fixed header spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -28,6 +28,13 @@ label {
         color: #ffffff;
 }
 
+header {
+	padding: 25px;
+        vertical-align: middle;
+        color: #ffffff;
+}
+
+
 header img {
 	/*padding: 1em;*/
 	/*background: #fff;*/
